Updated '_i18n/pt/_posts/2017-07-26-Postman.md' via CloudCannon

--- a/_i18n/pt/_posts/2017-07-26-Postman.md
+++ b/_i18n/pt/_posts/2017-07-26-Postman.md
@@ -40,7 +40,7 @@ Para utilizar o Postman, basta instalar o APP em seu computador. Isso pode ser r
 
 1.Acesse a Chrome Store, pesquise por POSTMAN  em APPs
 
-![]({{ site.baseurl_root }}/images/p1.png)
+![]({{ site.baseurl_root }}/images/TutorialPostman/p1.png)
 
 2.Na aba de Apps no seu Google Chrome acesse o ícone do Postman
 
