--- a/_i18n/pt/_posts/2017-07-26-Postman.md
+++ b/_i18n/pt/_posts/2017-07-26-Postman.md
@@ -1,7 +1,7 @@
 ---
 layout: tutorial
 title:  Postman Cielo
-description: O Postman é um API Client que facilita aos desenvolvedores criar, compartilhar, testar e documentar APIs. Isso é feito, permitindo aos usuários criar e salvar solicitações HTTP / s simples e complexas, bem como ler suas respostas.
+description: O Postman é um API Client que facilita aos desenvolvedores criar, compartilhar, testar e documentar APIs. 
 search: true
 categories: tutorial
 tags:
