Updated '_i18n/pt/_posts/2017-07-26-Pagador.md' via CloudCannon

--- a/_i18n/pt/_posts/2017-07-26-Pagador.md
+++ b/_i18n/pt/_posts/2017-07-26-Pagador.md
@@ -1,11 +1,11 @@
 ---
-layout: tutorial
-title:  Postman Cielo
-description: O Postman é um API Client que facilita aos desenvolvedores criar, compartilhar, testar e documentar APIs. 
+layout: Manual
+title:  Manual Pagador API
+description: Manual de integração da ferramenta Pagador. 
 search: true
-categories: tutorial
+categories: Manual
 tags:
-  - Documentos Adicionais
+  - Documentos Braspag
 toc_footers:
   - <a href='/Webservice-3.0/'>Integração API Cielo eCommerce</a>
   - <a href='/Checkout-Cielo/'>Integração Checkout Cielo</a>
