Updated '_i18n/pt/_posts/2017-07-26-Pagador.md' via CloudCannon

--- a/_i18n/pt/_posts/2017-07-26-Pagador.md
+++ b/_i18n/pt/_posts/2017-07-26-Pagador.md
@@ -1,14 +1,18 @@
 ---
-layout: Manual
-title:  Manual Pagador API
-description: Manual de integração da ferramenta Pagador. 
+layout: manual
+title: Pagador Braspag
+description: Integração técnica Gateway Braspag
 search: true
-categories: Manual
+translated: true
+categories: manual
 tags:
   - Documentos Braspag
+language_tabs:
+  json: JSON
 toc_footers:
-  - <a href='/Webservice-3.0/'>Integração API Cielo eCommerce</a>
-  - <a href='/Checkout-Cielo/'>Integração Checkout Cielo</a>
+  - <a href='/Habilitacao-meios-de-pagamento/'>Manual de Boleto e débito online</a>
+  - <a href='/Checkout-Backoffice/'>Backoffice Cielo (Acesso lojista)</a>
+  - <a href='/Checkout-FAQ/'>FAQ</a>
 ---
 
 # O que é o POSTMAN?
