Updated '_i18n/pt/_posts/2017-07-26-Pagador.md' via CloudCannon

--- a/_i18n/pt/_posts/2017-07-26-Pagador.md
+++ b/_i18n/pt/_posts/2017-07-26-Pagador.md
@@ -29,9 +29,9 @@ Experimente as nossas APIs sem compromisso!
 
 |Informação|Descrição|
 |----------|---------|
-|Credenciais de Acesso à API|Acesse o [Cadastro do Sandbox](https://cadastrosandbox.braspag.com.br/) e crie uma conta de testes.<BR>Ao fim do cadastro você receberá um `MerchantId` e um `MerchantKey`,<BR> que deverão ser utilizados para autenticar todas as requisições feitas para os endpoints da API|
-|Endpoint Transacional|https://apisandbox.braspag.com.br/|
-|Endpoint para Serviços de Consultas|https://apiquerysandbox.braspag.com.br/|
+|*Credenciais de Acesso à API*|Acesse o [Cadastro do Sandbox](https://cadastrosandbox.braspag.com.br/) e crie uma conta de testes.<BR>Ao fim do cadastro você receberá um `MerchantId` e um `MerchantKey`,<BR> que deverão ser utilizados para autenticar todas as requisições feitas para os endpoints da API|
+|*Endpoint Transacional*|https://apisandbox.braspag.com.br/|
+|*Endpoint para Serviços de Consultas*|https://apiquerysandbox.braspag.com.br/|
 
 ### Ambiente de Homologação
 
