Updated '_i18n/pt/_posts/2017-07-26-Pagador.md' via CloudCannon

--- a/_i18n/pt/_posts/2017-07-26-Pagador.md
+++ b/_i18n/pt/_posts/2017-07-26-Pagador.md
@@ -29,9 +29,9 @@ Experimente as nossas APIs sem compromisso!
 
 |Informação|Descrição|
 |----------|---------|
-|*Credenciais de Acesso à API*|Acesse o [Cadastro do Sandbox](https://cadastrosandbox.braspag.com.br/) e crie uma conta de testes.<BR>Ao fim do cadastro você receberá um `MerchantId` e um `MerchantKey`,<BR> que deverão ser utilizados para autenticar todas as requisições feitas para os endpoints da API|
-|*Endpoint Transacional*|https://apisandbox.braspag.com.br/|
-|*Endpoint para Serviços de Consultas*|https://apiquerysandbox.braspag.com.br/|
+|Credenciais de Acesso à API|Acesse o [Cadastro do Sandbox](https://cadastrosandbox.braspag.com.br/) e crie uma conta de testes.<BR>Ao fim do cadastro você receberá um `MerchantId` e um `MerchantKey`,<BR> que deverão ser utilizados para autenticar todas as requisições feitas para os endpoints da API|
+|Endpoint Transacional|https://apisandbox.braspag.com.br/|
+|Endpoint para Serviços de Consultas|https://apiquerysandbox.braspag.com.br/|
 
 ### Ambiente de Homologação
 
@@ -119,7 +119,7 @@ Exemplo de uma transação com dados obrigatórios para um simples processamento
      "Provider":"Simulado",
      "Type":"CreditCard",
      "Amount":10000,
-     "Capture":true,
+	 "Capture":true,
      "Installments":1,
      "CreditCard":{
          "CardNumber":"4551870000000181",
@@ -149,7 +149,7 @@ curl
      "Provider":"Simulado",
      "Type":"CreditCard",
      "Amount":10000,
-     "Capture":true,
+	 "Capture":true,
      "Installments":1,
      "CreditCard":{
          "CardNumber":"4551870000000181",
@@ -335,9 +335,9 @@ Este é um exemplo de uma transação com todos os dados preenchidos. Isso inclu
          "City":"São Paulo",
          "State":"SP",
          "Country":"BRA",
-         "District":"Alphaville"
+		 "District":"Alphaville"
       },
-      "DeliveryAddress": {
+	  "DeliveryAddress": {
          "Street":"Alameda Xingu",
          "Number":"512",
          "Complement":"27 andar",
@@ -345,8 +345,8 @@ Este é um exemplo de uma transação com todos os dados preenchidos. Isso inclu
          "City":"São Paulo",
          "State":"SP",
          "Country":"BRA",
-         "District":"Alphaville"
-         }
+		 "District":"Alphaville"
+	    }
    },
    "Payment":{  
      "Provider":"Simulado",
@@ -401,9 +401,9 @@ curl
          "City":"São Paulo",
          "State":"SP",
          "Country":"BRA",
-         "District":"Alphaville"
+		 "District":"Alphaville"
       },
-      "DeliveryAddress": {
+	  "DeliveryAddress": {
          "Street":"Alameda Xingu",
          "Number":"512",
          "Complement":"27 andar",
@@ -411,8 +411,8 @@ curl
          "City":"São Paulo",
          "State":"SP",
          "Country":"BRA",
-         "District":"Alphaville"
-         }
+		 "District":"Alphaville"
+	    }
    },
    "Payment":{  
      "Provider":"Simulado",
@@ -511,7 +511,7 @@ curl
       "City": "São Paulo",
       "State": "SP",
       "Country": "BRA",
-      "District":"Alphaville"
+	  "District":"Alphaville"
     },
     "DeliveryAddress": {
       "Street": "Alameda Xingu",
@@ -521,7 +521,7 @@ curl
       "City": "São Paulo",
       "State": "SP",
       "Country": "BRA",
-      "District":"Alphaville"
+	  "District":"Alphaville"
     }
   },
   "Payment": {
@@ -603,7 +603,7 @@ curl
       "City": "São Paulo",
       "State": "SP",
       "Country": "BRA",
-      "District":"Alphaville"
+	  "District":"Alphaville"
     },
     "DeliveryAddress": {
       "Street": "Alameda Xingu",
@@ -613,7 +613,7 @@ curl
       "City": "São Paulo",
       "State": "SP",
       "Country": "BRA",
-      "District":"Alphaville"
+	  "District":"Alphaville"
     }
   },
   "Payment": {
@@ -716,9 +716,9 @@ Este é um exemplo de uma transação com dados de autenticação externa. Este 
          "City":"São Paulo",
          "State":"SP",
          "Country":"BRA",
-         "District":"Alphaville"
+		 "District":"Alphaville"
       },
-      "DeliveryAddress": {
+	  "DeliveryAddress": {
          "Street":"Alameda Xingu",
          "Number":"512",
          "Complement":"27 andar",
@@ -726,8 +726,8 @@ Este é um exemplo de uma transação com dados de autenticação externa. Este 
          "City":"São Paulo",
          "State":"SP",
          "Country":"BRA",
-         "District":"Alphaville"
-         }
+		 "District":"Alphaville"
+	    }
    },
    "Payment":{  
      "Provider":"Simulado",
@@ -750,10 +750,10 @@ Este é um exemplo de uma transação com dados de autenticação externa. Este 
          "Brand":"Visa",
          "SaveCard":"false"
      },
-     "ExternalAuthentication":{
-      "Cavv":"AAABB2gHA1B5EFNjWQcDAAAAAAB=",
-      "Xid":"Uk5ZanBHcWw2RjRCbEN5dGtiMTB=",
-      "Eci":"5",
+	 "ExternalAuthentication":{
+       "Cavv":"AAABB2gHA1B5EFNjWQcDAAAAAAB=",
+       "Xid":"Uk5ZanBHcWw2RjRCbEN5dGtiMTB=",
+       "Eci":"5",
      },
      "ExtraDataCollection":[{
          "Name":"NomeDoCampo",
@@ -787,9 +787,9 @@ curl
          "City":"São Paulo",
          "State":"SP",
          "Country":"BRA",
-         "District":"Alphaville"
+		 "District":"Alphaville"
       },
-      "DeliveryAddress": {
+	  "DeliveryAddress": {
          "Street":"Alameda Xingu",
          "Number":"512",
          "Complement":"27 andar",
@@ -797,8 +797,8 @@ curl
          "City":"São Paulo",
          "State":"SP",
          "Country":"BRA",
-         "District":"Alphaville"
-         }
+		 "District":"Alphaville"
+	    }
    },
    "Payment":{  
      "Provider":"Simulado",
@@ -821,7 +821,7 @@ curl
          "Brand":"Visa",
          "SaveCard":"false"
      },
-     "ExternalAuthentication":{
+	 "ExternalAuthentication":{
        "Cavv":"AAABB2gHA1B5EFNjWQcDAAAAAAB=",
        "Xid":"Uk5ZanBHcWw2RjRCbEN5dGtiMTB=",
        "Eci":"5",
@@ -905,7 +905,7 @@ curl
       "City": "São Paulo",
       "State": "SP",
       "Country": "BRA",
-      "District":"Alphaville"
+	  "District":"Alphaville"
     },
     "DeliveryAddress": {
       "Street": "Alameda Xingu",
@@ -915,7 +915,7 @@ curl
       "City": "São Paulo",
       "State": "SP",
       "Country": "BRA",
-      "District":"Alphaville"
+	  "District":"Alphaville"
     }
   },
   "Payment": {
@@ -950,7 +950,7 @@ curl
     "Currency": "BRL",
     "Country": "BRA",
     "Provider": "Simulado",
-    "ExternalAuthentication":{
+	"ExternalAuthentication":{
        "Cavv":"AAABB2gHA1B5EFNjWQcDAAAAAAB=",
        "Xid":"Uk5ZanBHcWw2RjRCbEN5dGtiMTB=",
        "Eci":"5",
@@ -1002,7 +1002,7 @@ curl
       "City": "São Paulo",
       "State": "SP",
       "Country": "BRA",
-      "District":"Alphaville"
+	  "District":"Alphaville"
     },
     "DeliveryAddress": {
       "Street": "Alameda Xingu",
@@ -1012,7 +1012,7 @@ curl
       "City": "São Paulo",
       "State": "SP",
       "Country": "BRA",
-      "District":"Alphaville"
+	  "District":"Alphaville"
     }
   },
   "Payment": {
@@ -1047,7 +1047,7 @@ curl
     "Currency": "BRL",
     "Country": "BRA",
     "Provider": "Simulado",
-    "ExternalAuthentication":{
+	"ExternalAuthentication":{
        "Cavv":"AAABB2gHA1B5EFNjWQcDAAAAAAB=",
        "Xid":"Uk5ZanBHcWw2RjRCbEN5dGtiMTB=",
        "Eci":"5",
@@ -1112,10 +1112,10 @@ Quando uma transação é submetida ao processo de autenticação, o portador se
       "Name":"Nome do Comprador"
    },
    "Payment":{  
-   "Provider":"Cielo",
-      "Type":"CreditCard",
+      "Provider":"Cielo",
+	  "Type":"CreditCard",
       "Amount":10000, 
-      "Capture":true,
+	  "Capture":true,
       "Installments":1,
       "Authenticate":true,
       "ReturnUrl":"http://www.braspag.com.br",
@@ -1145,8 +1145,8 @@ curl
    },
    "Payment":{  
       "Provider":"Cielo",
-      "Type":"CreditCard",
-      "Amount":10000,
+	  "Type":"CreditCard",
+      "Amount":10000,  
       "Capture":true,	  
       "Installments":1,
       "Authenticate":true,
@@ -1316,9 +1316,9 @@ Para que a análise de fraude seja efetuada em tempo de transação, é necessá
          "City":"São Paulo",
          "State":"SP",
          "Country":"BRA",
-         "District":"Alphaville"
+		 "District":"Alphaville"
       },
-      "DeliveryAddress": {
+	  "DeliveryAddress": {
          "Street":"Alameda Xingu",
          "Number":"512",
          "Complement":"27 andar",
@@ -1326,14 +1326,14 @@ Para que a análise de fraude seja efetuada em tempo de transação, é necessá
          "City":"São Paulo",
          "State":"SP",
          "Country":"BRA",
-         "District":"Alphaville"
-         }
+		 "District":"Alphaville"
+	    }
    },
    "Payment":{  
      "Provider":"Simulado",
      "Type":"CreditCard",
      "Amount":10000,
-     "Capture":true,
+	 "Capture":true,
      "ServiceTaxAmount":0,
      "Currency":"BRL",
      "Country":"BRA",
@@ -1356,19 +1356,19 @@ Para que a análise de fraude seja efetuada em tempo de transação, é necessá
        "SequenceCriteria":"Always",
        "CaptureOnLowRisk":false,
        "VoidOnHighRisk":false,       
-       "FingerPrintId":"074c1ee676ed4998ab66491013c565e2",
-       "Browser":{
-         "CookiesAccepted":false,
-         "Email":"comprador@braspag.com.br",
-         "HostName":"Teste",
-         "IpAddress":"127.0.0.1",
-         "Type":"Chrome"
-         },
+       "FingerPrintId":"074c1ee676ed4998ab66491013c565e2",    
+	   "Browser":{
+		 "CookiesAccepted":false,
+		 "Email":"comprador@braspag.com.br",
+		 "HostName":"Teste",
+		 "IpAddress":"127.0.0.1",
+		 "Type":"Chrome"
+		},
        "Cart":{
          "IsGift":false,
          "ReturnsAccepted":true,
          "Items":[{
-                "GiftCategory":"Undefined",
+				"GiftCategory":"Undefined",
 				"HostHedge":"Off",
 				"NonSensicalHedge":"Off",
 				"ObscenitiesHedge":"Off",
@@ -1388,27 +1388,27 @@ Para que a análise de fraude seja efetuada em tempo de transação, é necessá
 				"Rating":"Adult",
 				"Phone":"999994444",
 				"Status":"Accepted"
-				}
-			}]
+			}
+           }]
+       },
+	    "MerchantDefinedFields":[{
+			"Id":95,
+			"Value":"Dado Definido pela Loja"
+		}],
+		"Shipping":{
+			"Addressee":"Alameda Xingu, 512",
+			"Method":"LowCost",
+			"Phone":"1121840540"
 		},
-		"MerchantDefinedFields":[{
-		    "Id":95,
-		    "Value":"Dado Definido pela Loja"
-		 }],
-		 "Shipping":{
-		    "Addressee":"Alameda Xingu, 512",
-		    "Method":"LowCost",
-		    "Phone":"1121840540"
-		    },
-		  "Travel":{
-		    "DepartureTime":"2020-01-01",
-		    "JourneyType":"Ida",
-		    "Route":"MAO-RJO",
-		  "Legs":[{
-		    "Destination":"GYN",
-		    "Origin":"VCP"
-		    }]
-		  }
+		"Travel":{
+			"DepartureTime":"2020-01-01",
+			"JourneyType":"Ida",
+			"Route":"MAO-RJO",
+		"Legs":[{
+			"Destination":"GYN",
+			"Origin":"VCP"
+          }]
+		}
      }
   }
 }
@@ -1438,9 +1438,9 @@ curl
          "City":"São Paulo",
          "State":"SP",
          "Country":"BRA",
-         "District":"Alphaville"
+		 "District":"Alphaville"
       },
-      "DeliveryAddress": {
+	  "DeliveryAddress": {
          "Street":"Alameda Xingu",
          "Number":"512",
          "Complement":"27 andar",
@@ -1448,14 +1448,14 @@ curl
          "City":"São Paulo",
          "State":"SP",
          "Country":"BRA",
-         "District":"Alphaville"
-         }
+		 "District":"Alphaville"
+	    }
    },
    "Payment":{  
      "Provider":"Simulado",
      "Type":"CreditCard",
      "Amount":10000,
-     "Capture":true,
+	 "Capture":true,
      "ServiceTaxAmount":0,
      "Currency":"BRL",
      "Country":"BRA",
@@ -1478,13 +1478,13 @@ curl
        "SequenceCriteria":"Always",
        "CaptureOnLowRisk":false,
        "VoidOnHighRisk":false,       
-       "FingerPrintId":"074c1ee676ed4998ab66491013c565e2",
-       "Browser":{
-         "CookiesAccepted":false,
-         "Email":"comprador@braspag.com.br",
-         "HostName":"Teste",
-         "IpAddress":"127.0.0.1",
-         "Type":"Chrome"
+       "FingerPrintId":"074c1ee676ed4998ab66491013c565e2",    
+	   "Browser":{
+		 "CookiesAccepted":false,
+		 "Email":"comprador@braspag.com.br",
+		 "HostName":"Teste",
+		 "IpAddress":"127.0.0.1",
+		 "Type":"Chrome"
 		},
        "Cart":{
          "IsGift":false,
@@ -3005,6 +3005,7 @@ curl
 |`ProviderReturnMessage`|Mensagem retornada pelo provedor do meio de pagamento (adquirente e bancos)|Texto|512|Transação Aprovada|
 |`CreditCard.CardToken`|Token no Cartão Protegido que representa os dados do cartão|Guid|36|xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx|
 
+
 ## Criando uma transação com Card Token
 
 Este é um exemplo de como utilizar o Card Token, previamente salvo, para criar uma transação. Por questão de segurança, um Card Token não tem guardado o Código de Segurança. Desta forma, é preciso solicitar esta informação ao portador para cada nova transação (exceto em casos de transações recorrentes).
@@ -4243,7 +4244,7 @@ curl
 |`AuthenticationUrl`|URL para o qual o portador será redirecionado para autenticação |Texto |56 |https://qasecommerce.cielo.com.br/web/index.cbmp?id=13fda1da8e3d90d3d0c9df8820b96a7f|
 
 # Pagamentos com Transferência Eletrônica
-
+	
 ## Criando uma transação
 
 Para criar uma venda de transferência eletrônica (conhecido como Débito Online), é necessário fazer um POST para o recurso Payment conforme o exemplo. 
@@ -6308,33 +6309,33 @@ Status retornados pela API
 
 |Reason Code|Reason Message|
 |-----------|--------------|
-|0|	Successful|
-|1|	AffiliationNotFound|
-|2|	IssuficientFunds|
-|3|	CouldNotGetCreditCard|
-|4|	ConnectionWithAcquirerFailed|
-|5|	InvalidTransactionType|
-|6|	InvalidPaymentPlan|
-|7|	Denied|
-|8|	Scheduled|
-|9|	Waiting|
-|10|	Authenticated|
-|11|	NotAuthenticated|
-|12|	ProblemsWithCreditCard|
-|13|	CardCanceled|
-|14|	BlockedCreditCard|
-|15|	CardExpired|
-|16|	AbortedByFraud|
-|17|	CouldNotAntifraud|
-|18|	TryAgain|
-|19|	InvalidAmount|
-|20|	ProblemsWithIssuer|
-|21|	InvalidCardNumber|
-|22|	TimeOut|
-|23|	CartaoProtegidoIsNotEnabled|
-|24|	PaymentMethodIsNotEnabled|
-|98|	InvalidRequest|
-|99|	InternalError|
+|0|Successful|
+|1|AffiliationNotFound|
+|2|IssuficientFunds|
+|3|CouldNotGetCreditCard|
+|4|ConnectionWithAcquirerFailed|
+|5|InvalidTransactionType|
+|6|InvalidPaymentPlan|
+|7|Denied|
+|8|Scheduled|
+|9|Waiting|
+|10|Authenticated|
+|11|NotAuthenticated|
+|12|ProblemsWithCreditCard|
+|13|CardCanceled|
+|14|BlockedCreditCard|
+|15|CardExpired|
+|16|AbortedByFraud|
+|17|CouldNotAntifraud|
+|18|TryAgain|
+|19|InvalidAmount|
+|20|ProblemsWithIssuer|
+|21|InvalidCardNumber|
+|22|TimeOut|
+|23|CartaoProtegidoIsNotEnabled|
+|24|PaymentMethodIsNotEnabled|
+|98|InvalidRequest|
+|99|InternalError|
 
 ## Códigos de Erros da API
 
@@ -6527,7 +6528,6 @@ Certifique-se de copiar todos os dados corretamente e de remover os sinais de ta
 ### PNG image
 
 ```html
-
 ‹p style="background:url(https://h.online-metrix.net/fp/clear.png?org_id=‹org ID›&session_id=‹merchant id›‹session ID›&m=1)"›‹/p›
 ‹img src="https://h.online-metrix.net/fp/clear.png?org_id=‹org ID›&session_id=‹merchant id›‹session ID›&m=2" alt=""›
 
@@ -6542,6 +6542,7 @@ Certifique-se de copiar todos os dados corretamente e de remover os sinais de ta
 ```
 
 ### Flash code
+
 
 ```html
 
@@ -6586,3 +6587,4 @@ id=‹merchant id›‹session ID›" type="text/javascript"›
 |Perguntas|Respostas|Tema|
 |---------|---------|----|
 |Qual é a diferença entre Status, ReasonCode e ProviderReturnCode?|A explicação conforme a seguir:<BR><UL><LI>Status: representa o status atual da transação.</LI><LI>ReasonCode: representa o status da requisição.</LI><LI>ProviderReturnCode: representa o código de resposta da transação da adquirente.</LI></UL>Por exemplo, uma requisição de autorização poderá ter o retorno com ReasonCode=0 (Sucessfull), ou seja, a requisição finalizou com sucesso, porém, o Status poderá ser 0-Denied, por ter a transação não autorizada pela adquirente, por exemplo, ProviderReturnCode 57 (um dos códigos de negada da Cielo)|Integração|
+
