Updated '_i18n/pt/_posts/2017-07-26-Pagador.md' via CloudCannon

--- a/_i18n/pt/_posts/2017-07-26-Pagador.md
+++ b/_i18n/pt/_posts/2017-07-26-Pagador.md
@@ -6526,13 +6526,15 @@ Certifique-se de copiar todos os dados corretamente e de remover os sinais de ta
 
 ### PNG image
 
-```html
+```
+html
 ‹p style="background:url(https://h.online-metrix.net/fp/clear.png?org_id=‹org ID›&session_id=‹merchant id›‹session ID›&m=1)"›‹/p›
 ‹img src="https://h.online-metrix.net/fp/clear.png?org_id=‹org ID›&session_id=‹merchant id›‹session ID›&m=2" alt=""›
 
 ```
 
-```html
+```
+html
 
 <!-- EXEMPLO -->
 ‹p style="background:url(https://h.online-metrix.net/fp/clear.png?org_id=sample_orgID&session_id=sample_merchantIDsample_sessionID&m=1)"›‹/p›
@@ -6542,7 +6544,8 @@ Certifique-se de copiar todos os dados corretamente e de remover os sinais de ta
 
 ### Flash code
 
-```html
+```
+html
 
 ‹object type="application/x-shockwave-flash" data="https://h.online-metrix.net/fp/fp.swf?org_id=‹org ID›&session_id=‹merchant id›‹session ID›" width="1" height="1"id="thm_fp"›
 ‹param name="movie" value="https://h.online-metrix.net/fp/fp.swf?org_id=‹orgID›&session_id=‹merchant id›‹session ID›" /›
@@ -6551,7 +6554,8 @@ Certifique-se de copiar todos os dados corretamente e de remover os sinais de ta
 
 ```
 
-```html
+```
+html
 
 <!-- EXEMPLO -->
 ‹object type="application/x-shockwave-flash" data="https://h.online-metrix.net/fp/fp.swf?org_id=sample_orgID&session_id=sample_merchantIDsample_sessionID"width="1" height="1" id="thm_fp"›
@@ -6563,7 +6567,8 @@ Certifique-se de copiar todos os dados corretamente e de remover os sinais de ta
 
 ### JavaScript code
 
-```html
+```
+html
 
 ‹script src="https://h.online-metrix.net/fp/check.js?org_id=‹org ID›&session_
 id=‹merchant id›‹session ID›" type="text/javascript"›
@@ -6571,7 +6576,8 @@ id=‹merchant id›‹session ID›" type="text/javascript"›
 
 ```
 
-```html
+```
+html
 
 <!-- EXEMPLO -->
 ‹script src="https://h.online-metrix.net/fp/check.js?org_id=‹org ID›&session_
