--- a/_i18n/pt/_posts/2017-07-26-Pagador.md
+++ b/_i18n/pt/_posts/2017-07-26-Pagador.md
@@ -14,11 +14,8 @@ toc_footers:
   - <a href='/Checkout-Backoffice/'>Backoffice Cielo (Acesso lojista)</a>
   - <a href='/Checkout-FAQ/'>FAQ</a>
 ---
--
 
 # Introdução ao Pagador API
-
--
 
 O objetivo desta documentação é orientar o desenvolvedor sobre como integrar com o API do Pagador, gateway de pagamentos da Braspag, descrevendo os serviços disponíveis com exemplos de requisição e respostas.
 
@@ -26,24 +23,18 @@ Todas as operações requerem credenciais de acesso (Merchant ID e Merchant Key)
 
 ## Ambientes
 
--
-
 ### Ambiente Sandbox
-
--
 
 Experimente as nossas APIs sem compromisso! 
 
 |Informação|Descrição|
 |----------|---------|
-|Credenciais de Acesso à API|Acesse o [*Cadastro do Sandbox*](https://cadastrosandbox.braspag.com.br/) e crie uma conta de testes.<BR>Ao fim do cadastro você receberá um `MerchantId` e um `MerchantKey`,<BR> que deverão ser utilizados para autenticar todas as requisições feitas para os endpoints da API|
+|Credenciais de Acesso à API|Acesse o [Cadastro do Sandbox](https://cadastrosandbox.braspag.com.br/) e crie uma conta de testes.<BR>Ao fim do cadastro você receberá um `MerchantId` e um `MerchantKey`,<BR> que deverão ser utilizados para autenticar todas as requisições feitas para os endpoints da API|
 |Endpoint Transacional|https://apisandbox.braspag.com.br/|
 |Endpoint para Serviços de Consultas|https://apiquerysandbox.braspag.com.br/|
--
 
 ### Ambiente de Homologação
 
--
 Valide seu desenvolvimento junto à nossa equipe! 
 
 |Informação|Descrição|
@@ -61,11 +52,9 @@ Já estou pronto para entrar em Produção!
 |Credenciais de Acesso à API|Envie um email para comercial@braspag.com.br para mais informações sobre a Braspag e sobre como podemos ajudar no seu negócio!|
 |Endpoint Transacional|https://api.braspag.com.br/|
 |Endpoint para Serviços de Consultas|https://apiquery.braspag.com.br/|
--
 
 ## Suporte Braspag
 
--
 <aside class="notice">A Braspag oferece suporte de alta disponibilidade, com atendimento de segunda à sexta, das 9h às 19h, e telefone de emergência 24×7, através de ferramenta via web. Contamos com a equipe que poderá atender em português, inglês e espanhol</aside>
 
 * Atendimento Web: [Suporte Braspag via Portal](http://suporte.braspag.com.br/)
@@ -92,3 +81,4 @@ A integração é realizada através de serviços disponibilizados como Web Serv
 * **POST** - O método HTTP POST é utilizado na criação de uma transação.
 * **PUT** - O método HTTP PUT é utilizado para atualização de um recurso já existente. Por exemplo, captura ou cancelamento de uma transação previamente autorizada.
 * **GET** - O método HTTP GET é utilizado para consultas de recursos já existentes. Por exemplo, consulta de transações.
+
