Updated '_i18n/pt/_posts/2017-07-26-Pagador.md' via CloudCannon

--- a/_i18n/pt/_posts/2017-07-26-Pagador.md
+++ b/_i18n/pt/_posts/2017-07-26-Pagador.md
@@ -1114,8 +1114,8 @@ Quando uma transação é submetida ao processo de autenticação, o portador se
    "Payment":{  
       "Provider":"Cielo",
       "Type":"CreditCard",
-      "Amount":10000, 
-	  "Capture":true,
+      "Amount":10000,
+      "Capture":true,
       "Installments":1,
       "Authenticate":true,
       "ReturnUrl":"http://www.braspag.com.br",
@@ -1145,8 +1145,8 @@ curl
    },
    "Payment":{  
       "Provider":"Cielo",
-	  "Type":"CreditCard",
-      "Amount":10000,  
+      "Type":"CreditCard",
+      "Amount":10000,
       "Capture":true,	  
       "Installments":1,
       "Authenticate":true,
@@ -1318,7 +1318,7 @@ Para que a análise de fraude seja efetuada em tempo de transação, é necessá
          "Country":"BRA",
          "District":"Alphaville"
     },
-	  "DeliveryAddress": {
+    "DeliveryAddress": {
          "Street":"Alameda Xingu",
          "Number":"512",
          "Complement":"27 andar",
@@ -1326,14 +1326,14 @@ Para que a análise de fraude seja efetuada em tempo de transação, é necessá
          "City":"São Paulo",
          "State":"SP",
          "Country":"BRA",
-		 "District":"Alphaville"
+         "District":"Alphaville"
       }
    },
    "Payment":{  
      "Provider":"Simulado",
      "Type":"CreditCard",
      "Amount":10000,
-	 "Capture":true,
+     "Capture":true,
      "ServiceTaxAmount":0,
      "Currency":"BRL",
      "Country":"BRA",
@@ -1356,40 +1356,40 @@ Para que a análise de fraude seja efetuada em tempo de transação, é necessá
        "SequenceCriteria":"Always",
        "CaptureOnLowRisk":false,
        "VoidOnHighRisk":false,       
-       "FingerPrintId":"074c1ee676ed4998ab66491013c565e2",    
-	   "Browser":{
-		 "CookiesAccepted":false,
-		 "Email":"comprador@braspag.com.br",
-		 "HostName":"Teste",
-		 "IpAddress":"127.0.0.1",
-		 "Type":"Chrome"
-		},
+       "FingerPrintId":"074c1ee676ed4998ab66491013c565e2"
+       "Browser":{
+         "CookiesAccepted":false,
+         "Email":"comprador@braspag.com.br",
+         "HostName":"Teste",
+         "IpAddress":"127.0.0.1",
+         "Type":"Chrome"
+         },
        "Cart":{
          "IsGift":false,
          "ReturnsAccepted":true,
          "Items":[{
-				"GiftCategory":"Undefined",
-				"HostHedge":"Off",
-				"NonSensicalHedge":"Off",
-				"ObscenitiesHedge":"Off",
-				"PhoneHedge":"Off",
-				"Name":"ItemTeste",
-				"Quantity":1,
-				"Sku":"20170511",
-				"UnitPrice":10000,
-				"Risk":"High",
-				"TimeHedge":"Normal",
-				"Type":"AdultContent",
-				"VelocityHedge":"High",
-				"Passenger":{
-				"Email":"comprador@braspag.com.br",
-				"Identity":"1234567890",
-				"Name":"Nome do Comprador",
-				"Rating":"Adult",
-				"Phone":"999994444",
-				"Status":"Accepted"
-			}
-           }]
+                "GiftCategory":"Undefined",
+                "HostHedge":"Off",
+                "NonSensicalHedge":"Off",
+                "ObscenitiesHedge":"Off",
+                "PhoneHedge":"Off",
+                "Name":"ItemTeste",
+                "Quantity":1,
+                "Sku":"20170511",
+                "UnitPrice":10000,
+                "Risk":"High",
+                "TimeHedge":"Normal",
+                "Type":"AdultContent",
+                "VelocityHedge":"High",
+                "Passenger":{
+                   "Email":"comprador@braspag.com.br",
+                   "Identity":"1234567890",
+                   "Name":"Nome do Comprador",
+                   "Rating":"Adult",
+                   "Phone":"999994444",
+                   "Status":"Accepted"
+                   }
+            }]
        },
 	    "MerchantDefinedFields":[{
 			"Id":95,
