--- a/_i18n/pt/_posts/2017-07-26-Pagador.md
+++ b/_i18n/pt/_posts/2017-07-26-Pagador.md
@@ -1391,24 +1391,24 @@ Para que a análise de fraude seja efetuada em tempo de transação, é necessá
                    }
             }]
        },
-	    "MerchantDefinedFields":[{
-			"Id":95,
-			"Value":"Dado Definido pela Loja"
-		}],
-		"Shipping":{
-			"Addressee":"Alameda Xingu, 512",
-			"Method":"LowCost",
-			"Phone":"1121840540"
-		},
-		"Travel":{
-			"DepartureTime":"2020-01-01",
-			"JourneyType":"Ida",
-			"Route":"MAO-RJO",
-		"Legs":[{
-			"Destination":"GYN",
-			"Origin":"VCP"
+       "MerchantDefinedFields":[{
+            "Id":95,
+            "Value":"Dado Definido pela Loja"
+            }],
+       "Shipping":{
+            "Addressee":"Alameda Xingu, 512",
+            "Method":"LowCost",
+            "Phone":"1121840540"
+            },
+        "Travel":{
+            "DepartureTime":"2020-01-01",
+            "JourneyType":"Ida",
+            "Route":"MAO-RJO",
+        "Legs":[{
+            "Destination":"GYN",
+            "Origin":"VCP"
           }]
-		}
+         }
      }
   }
 }
@@ -1438,9 +1438,9 @@ curl
          "City":"São Paulo",
          "State":"SP",
          "Country":"BRA",
-		 "District":"Alphaville"
-      },
-	  "DeliveryAddress": {
+         "District":"Alphaville"
+        },
+    "DeliveryAddress": {
          "Street":"Alameda Xingu",
          "Number":"512",
          "Complement":"27 andar",
@@ -1448,14 +1448,14 @@ curl
          "City":"São Paulo",
          "State":"SP",
          "Country":"BRA",
-		 "District":"Alphaville"
+         "District":"Alphaville"
       },
    },
    "Payment":{  
      "Provider":"Simulado",
      "Type":"CreditCard",
      "Amount":10000,
-	 "Capture":true,
+     "Capture":true,
      "ServiceTaxAmount":0,
      "Currency":"BRL",
      "Country":"BRA",
@@ -1478,14 +1478,14 @@ curl
        "SequenceCriteria":"Always",
        "CaptureOnLowRisk":false,
        "VoidOnHighRisk":false,       
-       "FingerPrintId":"074c1ee676ed4998ab66491013c565e2",    
-	   "Browser":{
-		 "CookiesAccepted":false,
-		 "Email":"comprador@braspag.com.br",
-		 "HostName":"Teste",
-		 "IpAddress":"127.0.0.1",
-		 "Type":"Chrome"
-		},
+       "FingerPrintId":"074c1ee676ed4998ab66491013c565e2",
+       "Browser":{
+         "CookiesAccepted":false,
+         "Email":"comprador@braspag.com.br",
+         "HostName":"Teste",
+         "IpAddress":"127.0.0.1",
+         "Type":"Chrome"
+         },
        "Cart":{
          "IsGift":false,
          "ReturnsAccepted":true,
@@ -1510,27 +1510,27 @@ curl
 				"Rating":"Adult",
 				"Phone":"999994444",
 				"Status":"Accepted"
-			}
-           }]
-       },
-	    "MerchantDefinedFields":[{
-			"Id":95,
-			"Value":"Dado Definido pela Loja"
-		}],
-		"Shipping":{
-			"Addressee":"Alameda Xingu, 512",
-			"Method":"LowCost",
+				}
+			}]
+	},
+	"MerchantDefinedFields":[{
+	        "Id":95,
+	        "Value":"Dado Definido pela Loja"
+	        }],
+	    "Shipping":{
+	        "Addressee":"Alameda Xingu, 512",
+	        "Method":"LowCost",
 			"Phone":"1121840540"
 		},
 		"Travel":{
-			"DepartureTime":"2020-01-01",
-			"JourneyType":"Ida",
-			"Route":"MAO-RJO",
-		"Legs":[{
-			"Destination":"GYN",
-			"Origin":"VCP"
+		    "DepartureTime":"2020-01-01",
+		    "JourneyType":"Ida
+		    "Route":"MAO-RJO",
+		 "Legs":[{
+		    "Destination":"GYN",
+		    "Origin":"VCP"
           }]
-		}
+        }
      }
   }
 }
@@ -1586,7 +1586,7 @@ curl
 |`CreditCard.SaveCard`|Booleano|---|Não (Default false)|Booleano que identifica se o cartão será salvo para gerar o token (CardToken)|
 |`FraudAnalysis.Sequence`|Texto|14|Sim|Tipo de Fluxo para realização da análise de fraude. Primeiro Analise (AnalyseFirst) ou Primeiro Autorização (AuthorizeFirst)|
 |`FraudAnalysis.SequenceCriteria`|Texto|9|Sim|Critério do fluxo.<BR><UL><LI>OnSuccess - Só realiza a analise se tiver sucesso na transação</LI><LI>Always - Sempre realiza a analise</LI></UL>|
-|`FraudAnalysis.CaptureOnLowRisk`|Booleano|---|Não|Quando true, a autorização deve ser com captura automática quando o risco de fraude for considerado baixo (Accept). Em casos de Reject ou Review, o fluxo permanece o mesmo, ou seja, a captura acontecerá conforme o valor especificado no parâmetro "Capture". Para a utilização deste parâmetro, a sequência do fluxo de análise de risco deve ser obrigatoriamente "AuthorizeFirst". Por depender do resutlado de análise de risco, este parâmetro só terá efeito quando o serviço de Antifraude for contratado	|
+|`FraudAnalysis.CaptureOnLowRisk`|Booleano|---|Não|Quando true, a autorização deve ser com captura automática quando o risco de fraude for considerado baixo (Accept). Em casos de Reject ou Review, o fluxo permanece o mesmo, ou seja, a captura acontecerá conforme o valor especificado no parâmetro "Capture". Para a utilização deste parâmetro, a sequência do fluxo de análise de risco deve ser obrigatoriamente "AuthorizeFirst". Por depender do resutlado de análise de risco, este parâmetro só terá efeito quando o serviço de Antifraude for contratado|
 |`FraudAnalysis.VoidOnHighRisk`|Booleano|---|Não|Quando true, o estorno deve acontecer automaticamente quando o risco de fraude for considerado alto (Reject). Em casos de Accept ou Review, o fluxo permanece o mesmo, ou seja, o estorno deve ser feito manualmente. Para a utilização deste parâmetro, a sequência do fluxo de análise de risco deve ser obrigatoriamente "AuthorizeFirst". Por depender do resutlado de análise de risco, este parâmetro só terá efeito quando o serviço de Antifraude for contratado. |
 |`FraudAnalysis.FingerPrintId`|Texto|50|Sim|Identificador utilizado para cruzar informações obtidas pelo Browser do internauta com os dados enviados para análise. Este mesmo valor deve ser passado na variável SESSIONID do script do DeviceFingerPrint|
 |`FraudAnalysis.Browser.CookiesAccepted`|Booleano|---|Sim|Booleano para identificar se o browser do cliente aceita cookies|
@@ -1655,7 +1655,7 @@ curl
       "City": "São Paulo",
       "State": "SP",
       "Country": "BRA",
-	  "District":"Alphaville"
+      "District":"Alphaville"
       }
   },
   "Payment": {
@@ -1673,7 +1673,7 @@ curl
       "Brand": "Undefined"
     },
     "SoftDescriptor": "Mensagem",
-	"FraudAnalysis": {
+    "FraudAnalysis": {
             "Sequence": "AnalyseFirst",
             "SequenceCriteria": "Always",
             "FingerPrintId": "074c1ee676ed4998ab66491013c565e2",
@@ -1794,7 +1794,7 @@ curl
       "City": "São Paulo",
       "State": "SP",
       "Country": "BRA",
-	  "District":"Alphaville"
+      "District":"Alphaville"
       },
     "DeliveryAddress": {
       "Street": "Alameda Xingu",
@@ -1822,7 +1822,7 @@ curl
       "Brand": "Undefined"
     },
     "SoftDescriptor": "Mensagem",
-	"FraudAnalysis": {
+    "FraudAnalysis": {
             "Sequence": "AnalyseFirst",
             "SequenceCriteria": "Always",
             "FingerPrintId": "074c1ee676ed4998ab66491013c565e2",
@@ -2798,7 +2798,7 @@ Caso você tenha contratado o Cartão Protegido, é possível salvar um cartão 
      "Provider":"Simulado",
      "Type":"CreditCard",
      "Amount":10000,
-	 "Capture":true,
+     "Capture":true,
      "Installments":1,
      "CreditCard":{
          "CardNumber":"4551870000000181",
@@ -2807,7 +2807,7 @@ Caso você tenha contratado o Cartão Protegido, é possível salvar um cartão 
          "SecurityCode":"123",
          "Brand":"Visa",
          "SaveCard":true,
-	 "Alias": "Cliente1"
+         "Alias": "Cliente1"
      }
    }
 }
@@ -2830,7 +2830,7 @@ curl
      "Provider":"Simulado",
      "Type":"CreditCard",
      "Amount":10000,
-	 "Capture":true,
+     "Capture":true,
      "Installments":1,
      "CreditCard":{
          "CardNumber":"4551870000000181",
@@ -2839,7 +2839,7 @@ curl
          "SecurityCode":"123",
          "Brand":"Visa",
          "SaveCard":true,
-	 "Alias": "Cliente1"
+         "Alias": "Cliente1"
      }
    }
 }
@@ -3023,7 +3023,7 @@ Este é um exemplo de como utilizar o Card Token, previamente salvo, para criar 
      "Provider":"Simulado",
      "Type":"CreditCard",
      "Amount":10000,
-	 "Capture":true,
+     "Capture":true,
      "Installments":1,
      "CreditCard":{
          "CardToken":"250e7c7c-5501-4a7c-aa42-a33d7ad61167",
@@ -3051,7 +3051,7 @@ curl
      "Provider":"Simulado",
      "Type":"CreditCard",
      "Amount":10000,
-	 "Capture":true,
+     "Capture":true,
      "Installments":1,
      "CreditCard":{
          "CardToken":"250e7c7c-5501-4a7c-aa42-a33d7ad61167",
@@ -3222,7 +3222,7 @@ Este é um exemplo de como utilizar o Alias, previamente salvo, para criar uma t
      "Provider":"Simulado",
      "Type":"CreditCard",
      "Amount":10000,
-	 "Capture":true,
+     "Capture":true,
      "Installments":1,
      "CreditCard":{
          "Alias":"Cliente1",
@@ -3588,7 +3588,7 @@ No caso da rejeição pela regra de Velocity, o ProviderReasonCode será BP171 -
          "State":"SP",
          "Country":"BRA"
       },
-	  "DeliveryAddress": {
+      "DeliveryAddress": {
          "Street":"Alameda Xingu",
          "Number":"512",
          "Complement":"27 andar",
@@ -3596,13 +3596,13 @@ No caso da rejeição pela regra de Velocity, o ProviderReasonCode será BP171 -
          "City":"São Paulo",
          "State":"SP",
          "Country":"BRA"
-	    }
+         }
    },
    "Payment":{
      "Provider":"Simulado",
      "Type":"CreditCard",
      "Amount":10000,
-	 "Capture":true,
+     "Capture":true,
      "Installments":1,
      "CreditCard":{
          "CardNumber":"4551870000000181",
@@ -3639,7 +3639,7 @@ curl
          "State":"SP",
          "Country":"BRA"
       },
-	  "DeliveryAddress": {
+      "DeliveryAddress": {
          "Street":"Alameda Xingu",
          "Number":"512",
          "Complement":"27 andar",
@@ -3647,13 +3647,13 @@ curl
          "City":"São Paulo",
          "State":"SP",
          "Country":"BRA"
-	    }
+         }
    },
    "Payment":{
      "Provider":"Simulado",
      "Type":"CreditCard",
      "Amount":10000,
-	 "Capture":true,
+     "Capture":true,
      "Installments":1,
      "CreditCard":{
          "CardNumber":"4551870000000181",
@@ -3881,7 +3881,7 @@ substituiu as vencidas. Bancos Emissores participantes: Bradesco, Banco do Brasi
      "Provider":"Simulado",
      "Type":"CreditCard",
      "Amount":10000,
-	 "Capture":true,
+     "Capture":true,
      "Installments":1,
      "CreditCard":{
          "CardNumber":"4551870000000183",
@@ -3910,7 +3910,7 @@ curl
      "Provider":"Simulado",
      "Type":"CreditCard",
      "Amount":10000,
-	 "Capture":true,
+     "Capture":true,
      "Installments":1,
      "CreditCard":{
          "CardNumber":"4551870000000183",
@@ -4261,17 +4261,17 @@ Para criar uma venda de transferência eletrônica (conhecido como Débito Onlin
         "Identity": "12345678909",
         "IdentityType": "CPF",
         "Email": "comprador@braspag.com.br",
-        "Address": 
+        "Address":
         {
-			 "Street":"Alameda Xingu",
-			 "Number":"512",
-			 "Complement":"27 andar",
-			 "ZipCode":"12345987",
-			 "City":"São Paulo",
-			 "State":"SP",
-			 "Country":"BRA",
+             "Street":"Alameda Xingu",
+             "Number":"512",
+             "Complement":"27 andar",
+             "ZipCode":"12345987",
+             "City":"São Paulo",
+             "State":"SP",
+             "Country":"BRA",
              "District":"Alphaville"
-     }
+         }
   },
     "Payment":
     {  
@@ -4301,15 +4301,15 @@ curl
         "Email": "comprador@braspag.com.br",
         "Address": 
         {
-			 "Street":"Alameda Xingu",
-			 "Number":"512",
-			 "Complement":"27 andar",
-			 "ZipCode":"12345987",
-			 "City":"São Paulo",
-			 "State":"SP",
-			 "Country":"BRA",
+             "Street":"Alameda Xingu",
+             "Number":"512",
+             "Complement":"27 andar",
+             "ZipCode":"12345987",
+             "City":"São Paulo",
+             "State":"SP",
+             "Country":"BRA",
              "District":"Alphaville"
-     }
+        }
     },
     "Payment":
     {  
@@ -4355,16 +4355,15 @@ curl
         "IdentityType": "CPF",
         "Email": "comprador@braspag.com.br",
         "Address": 
-        {
-			 "Street":"Alameda Xingu",
-			 "Number":"512",
-			 "Complement":"27 andar",
-			 "ZipCode":"12345987",
-			 "City":"São Paulo",
-			 "State":"SP",
-			 "Country":"BRA",
+        {"Street":"Alameda Xingu",
+        "Number":"512",
+        "Complement":"27 andar",
+        "ZipCode":"12345987",
+        City":"São Paulo",
+        "State":"SP",
+             "Country":"BRA",
              "District":"Alphaville"
-     }
+            }
     },
     "Payment": {
         "Url": "https://xxx.xxxxxxx.xxx.xx/post/EletronicTransfer/Redirect/{PaymentId}",
@@ -4450,13 +4449,13 @@ Para criar uma transação de Boleto sem Registro, basta fazer um POST conform
     {  
         "Provider":"Simulado",
 		"Type":"Boleto",
-        "Amount":10000,
+		"Amount":10000,
 		"Assignor": "Braspag Tecnologia de Pagamento Ltda",
-        "Demonstrative": "Texto para Demonstrativo",
+		"Demonstrative": "Texto para Demonstrativo",
         "ExpirationDate": "2017-12-31",
         "Identification": "01234567000189",
-        "Instructions": "Aceitar somente até a data de vencimento"		
-    }
+        "Instructions": "Aceitar somente até a data de vencimento"
+        }
 }
 ```
 
@@ -4478,9 +4477,9 @@ curl
     {  
         "Provider":"Simulado",
 		"Type":"Boleto",
-        "Amount":10000,
+		"Amount":10000,
 		"Assignor": "Braspag Tecnologia de Pagamento Ltda",
-        "Demonstrative": "Texto para Demonstrativo",
+		"Demonstrative": "Texto para Demonstrativo",
         "ExpirationDate": "2017-12-31",
         "Identification": "01234567000189",
         "Instructions": "Aceitar somente até a data de vencimento"
@@ -4615,14 +4614,14 @@ Para gerar um boleto registrado, é necessário fornecer alguns dados a mais do 
         "Identity":"12345678909",
 		"IdentityType":"CPF",
 		"Address":{  
-			"Street":"Alameda Xingu",
-			"Number":"512",
-			"Complement":"27 andar",
-			"ZipCode":"12345987",
-			"City":"São Paulo",
-			"State":"SP",
-			"Country":"BRA",
-            "District":"Alphaville"
+		   "Street":"Alameda Xingu",
+		   "Number":"512",
+		   "Complement":"27 andar",
+		   "ZipCode":"12345987",
+		   "City":"São Paulo",
+		   "State":"SP",
+		   "Country":"BRA",
+		   "District":"Alphaville"
      }
     },
     "Payment":
