--- a/_i18n/pt/_posts/2003-03-03-FAQ-API-3.0.md
+++ b/_i18n/pt/_posts/2003-03-03-FAQ-API-3.0.md
@@ -1,11 +1,11 @@
 ---
 layout: faq
-title: Perguntas frequentes da API Cielo
+title: FAQ
 description: Respostas para perguntas frequentes feitas pelos desenvolvedores durante a integração com a API Cielo.
 search: true
 categories: faq
 tags:
-  - API Cielo
+  - API e-Commerce Cielo
 toc_footers:
   - <a href='/Webservice-3.0/'>Integração API Cielo eCommerce</a>
   - <a href='/Guia-de-migracao-1.5x3.0/'>Guia de migração da API 1.5 para a API Cielo eCommerce</a>
