Updated '_i18n/pt/_posts/api-cielo/2003-03-03-Split.md' via CloudCannon

--- a/_i18n/pt/_posts/api-cielo/2003-03-03-Split.md
+++ b/_i18n/pt/_posts/api-cielo/2003-03-03-Split.md
@@ -12,8 +12,10 @@ language_tabs:
   shell: cURL
 ---
 
-### O que é o Split de Pagamentos ?
+# O que é o Split de Pagamentos ?
+
 <BR><BR>
+
 O Split de Pagamentos permite a divisão de uma transação entre diferentes participantes de uma venda.
 
 Muito utilizado em Marketplaces, onde **o carrinho é composto por produtos de diferentes fornecedores** e o valor total da venda deve ser dividido entre os participantes.
@@ -26,8 +28,10 @@ Muito utilizado em Marketplaces, onde **o carrinho é composto por produtos de d
 
 > \***MDR**  (*Merchant Discount Rate*): Percentual a ser descontado sobre o valor de uma transação.
 
-### Como funciona o Split de Pagamentos?
+## Como funciona o Split de Pagamentos?
+
 <BR>
+
 No Split de Pagamentos o responsável pelo fluxo transacional é o facilitador.
 
 O Marketplace se integra à Braspag para transacionar e informa como será dividida a transação entre cada participante, podendo ser no momento de captura ou em um momento posterior, conhecido como split pós-transacional, desde que seja dentro de um limite de tempo pré-estabelecido. 
@@ -49,14 +53,17 @@ A divisão de uma transação deve serguir as seguintes regras:
 
 O **Marketplace** também pode ser um participante da divisão. Para isso basta informar seu identificador na divisão, passando o mesmo a ter também o papel de **Subordinado** e ter seus próprios produtos no carrinho. 
 
-### Taxas
+## Taxas
 
 As taxas acordadas entre os participantes, que são o **MDR(%)** e uma **Taxa Fixa(R$)**, devem ser definidas no momento do cadastro do **Marketplace** e dos seus **Subordinados** junto à Braspag.  
 
 As mesmas poderão ser enviadas no momento transacional ou pós-transacional. Caso não sejam enviadas, a **Braspag** irá considerar as taxas já cadastradas.   
 <BR>
-#### Braspag (Facilitador)
+
+### Braspag (Facilitador)
+
 <BR>
+
 A Braspag acordará um **MDR(%)** e uma **Tarifa Fixa(R$)** com o **Marketplace** a serem descontados em cada transação.
 
 O **Marketplace**, de conhecimento destas taxas, negociará o seu **MDR(%)** e uma **Tarifa Fixa(R$)(opcional)** juntamente com seus **Subornidandos**, já embutindo o **MDR(%)** acordado junto à **Braspag**.
@@ -68,14 +75,18 @@ O desconto da **Tarifa Fixa(R$)**, acordado entre o **Marketplace** e a **Braspa
 > O **MDR(%)** acordado entre um **Marketplace** e um **Subordinado** deve ser sempre maior que o **MDR(%)** acordado entre a **Braspag** e o **Marketplace**. 
 
 <BR>
-#### Marketplace
+
+### Marketplace
+
 <BR>
 O **Marketplace** é responsável por acordar as taxas a serem cobradas de seus **Subordinados**, onde deve ser defindo um **MDR(%)** maior ou igual ao **MDR(%)** definido entre a **Braspag** e o **Marketplace** e uma **Tarifa Fixa(R$)**, que é opcional. 
 
 > **Custo para o Subordinado:** MDR Marketplace(%) + Tarifa Fixa(R$), onde no MDR Marketplace(%) está embutido o MDR Braspag(%).
 
 <BR>
+
 #### Exemplo
+
 <BR>
 Uma transação de **R$100**, realizada por um **Marketplace** com participação do **Subordinado 01**.
 
@@ -99,7 +110,8 @@ Débito: R$0,30 (Tarifa Fixa Braspag)
 Crédito: R$2,00 = R$100 * 2%.  
 Crédito: R$0,30 (Tarifa Fixa Braspag)
 
-### Utilizando o Split de Pagamentos
+## Utilizando o Split de Pagamentos
+
 <BR>
 O Split de Pagamentos é parte da API Cielo E-Commerce, desenvolvida utilizando a arquitetura REST e JSON como mensageria. Para mais informações sobre a API Cielo E-Commerce, consulte o [Manual de Integração](https://developercielo.github.io/Webservice-3.0/#criando-uma-transação-simples){:target="_blank"} da Plataforma.
 
@@ -254,7 +266,6 @@ Neste caso o cálculos do Split são realizados sobre cada regra de divisão inf
 ### Modelos de Split
 
 O Split de Pagamentos possui dois modelos básicos de integração:
-
 
 | Tipo                 | Descrição                                                                                                                          |
 |----------------------|------------------------------------------------------------------------------------------------------------------------------------|
